--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,15 @@
 <!doctype html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+ {% if resultat %}
   <title>Results</title>
+{% else %}
+<title>Results</title>
+ {% endif %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+      </head>
   <h2> Le MZR DECODE</h2>
   {% if resultat %}
   <p>
@@ -10,9 +20,9 @@
 
   </p>
   {% endif %}
-  <form method=post enctype=multipart/form-data>
-    <input type=file name=file>
-    <input type=submit value=Upload>
+  <form method="post" enctype="multipart/form-data">
+    <input type="file" name="file">
+    <input type="submit" value="Upload">
   </form>
 
 
